Added a couple of defines from the older Makefile

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,6 +7,8 @@
 
 ## Process this file with automake to produce Makefile.in
 
+CPPFLAGS += -DMIRROR_SCORE0 -DLOCAL_HYPS
+
 lib_LIBRARIES = libjuicer.a
 
 libjuicer_a_SOURCES = \
