--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # ...and manually buggered up by Phil Garner
 
 AC_PREREQ(2.60)
-AC_INIT([Juicer], [0.6.1])
+AC_INIT([Juicer], [0.7.0])
 AM_INIT_AUTOMAKE([-Wall -Werror])
 AC_CONFIG_SRCDIR([src/juicer.cpp])
 AC_CONFIG_HEADERS([config.h])
@@ -92,6 +92,8 @@ AC_PROG_LIBTOOL
 
 AC_CONFIG_FILES([
 	Makefile
+	juicer.pc
+	Doxyfile
 	bin/Makefile
 	src/Makefile
 	doc/Makefile
