Separate HModels and HTKModels Some mods to the decoder and network for speed up Overhauled short pause model processing and pruning

--- a/configure.ac
+++ b/configure.ac
@@ -60,31 +60,24 @@ AC_ARG_WITH(htk-includes,
   [AS_HELP_STRING(
     [--with-htk-includes=DIR],
     [Directory containing HTK headers]
-  )],
-  [],
-  [with_htk_includes=no]
+  )]
 )
 AC_ARG_WITH(htk-libs,
   [AS_HELP_STRING(
     [--with-htk-libs=DIR],
     [List of HTK libraries]
-  )],
-  [],
-  [with_htk_libs=no]
+  )]
 )
-AM_CONDITIONAL([WITH_HTK], [test "x$with_htk_includes" != xno])
 AC_MSG_CHECKING([whether to use HTK])
 AS_IF(
-  [test "x$with_htk_includes" != xno],
-  [AC_SUBST([HTK_LIBS], [$with_htk_libs])
-   AC_SUBST([HTK_INCLUDES], [$with_htk_includes])
-   AC_DEFINE_UNQUOTED(
-       [HAVE_HTKLIB], 1,
-       [Define to 1 if you have HTK.]
-     )
+  [test "$with_htk_includes" != ""],
+  [AC_DEFINE([HAVE_HTKLIB], [1], [Define if you have HTK.])
    AC_MSG_RESULT(yes)],
   [AC_MSG_RESULT(no)]
 )
+AC_SUBST([HTK_INCLUDES], [$with_htk_includes])
+AC_SUBST([HTK_LIBS], [$with_htk_libs])
+AM_CONDITIONAL([WITH_HTK], [test "$with_htk_includes" != ""])
 
 
 # Checks for programs.
