Minor tweak of the files. Also turns all optimisation on in Makefile.am

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -60,7 +60,7 @@ LEX_OUTPUT_ROOT = lex.htk
 
 bin_PROGRAMS = juicer juicer-htk gramgen cdgen lexgen genwfstseqs
 
-libjuicer_la_CPPFLAGS = @TORCH_CFLAGS@ @TRACTER_CFLAGS@ @HTK_INCLUDES@
+libjuicer_la_CPPFLAGS = @TORCH_CFLAGS@ @TRACTER_CFLAGS@ @HTK_INCLUDES@ -DMIRROR_SCORE0 -DOPTIMISE_FLATMODEL -DOPTIMISE_ALIGN4 -DOPTIMISE_TRANSBUFPOOL -DOPTIMISE_GETNEWMODEL -DOPTIMISE_INLINE_RESET_DECHYP -DOPTIMISE_TEEMODEL
 libjuicer_la_LIBADD = @TRACTER_LIBS@
 
 LDADD = libjuicer.la @TORCH_LIBS@
