Remove optimisation options, hard-wiring the one that works best

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,18 +8,10 @@
 ## Process this file with automake to produce Makefile.in
 
 OPT = # add flags as you wish
-OPT += -DTRANS_OPT
 OPT += -DOPTIMISE_FLATMODEL
-OPT += -DOPTIMISE_TEEMODEL
+OPT += -DOPTIMISE_ALIGN4
 OPT += -DNO_BEST_END
 OPT += -DNO_BEST_START
-#OPT += -DLOCAL_HYPS
-#OPT += -DMIRROR_SCORE0
-#OPT += -DOPTIMISE_ALIGN4
-#OPT += -DOPTIMISE_TRANSBUFPOOL
-#OPT += -DOPTIMISE_GETNEWMODEL
-#OPT += -DOPTIMISE_INLINE_RESET_DECHYP
-
 
 lib_LTLIBRARIES = libjuicer.la
 
