--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,6 +2,8 @@
 # Copyright 2007 by IDIAP Research Institute
 #                   http://www.idiap.ch
 #
+# Copyright 2008 by The University of Sheffield
+#
 # See the file COPYING for the licence associated with this software.
 #
 
