--- a/Makefile.am
+++ b/Makefile.am
@@ -7,9 +7,13 @@
 
 ## Process this file with automake to produce Makefile.in
 
+ACLOCAL_AMFLAGS = -I m4
+
 SUBDIRS = bin src
 DIST_SUBDIRS = bin src doc
 EXTRA_DIST = Doxyfile.in juicer.pc.in
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = juicer.pc
+
+nodist_pkginclude_HEADERS = config.h
