WFSTDecoderLite implements a new token-passing WFST decoder that is compatible with the WFSTDecoder, and offer 1. 5-10% speed improvement, 2. less memory requirement
phone start/end pruning have been implemented as well as the usual histogram-based and emitting threshold pruning.

Please note due to the way the score is calculated internaly, the same histogram pruning threshold (-maxHyps) will give
different pruning thresholds (and hence more hypothesises) for the new core.

by default the new core will be built (through compile flag OPTIMISE_DECODER_LITE) as well as the old one, and a new
command line switch -fast has been added to active the new core.

 Please enter the commit message for your changes.
 (Comment lines starting with '#' will not be included)
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	new file:   WFSTDecoderLite.cpp
	new file:   WFSTDecoderLite.h

 Changed but not updated:
   (use "git add <file>..." to update what will be committed)

	modified:   BlockMemPool.cpp
	modified:   BlockMemPool.h
	modified:   HModels.cpp
	modified:   HModels.h
	modified:   HTKModels.cpp
	modified:   HTKModels.h
	modified:   Makefile.am
	modified:   Models.h
	modified:   WFSTDecoder.cpp
	modified:   WFSTDecoder.h
	modified:   WFSTNetwork.cpp
	modified:   WFSTNetwork.h
	modified:   juicer.cpp

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,14 +11,16 @@
 
 OPT = # add flags as you wish
 OPT += -DOPTIMISE_FLATMODEL
-OPT += -DOPTIMISE_ALIGN4
-OPT += -DNO_BEST_END
-OPT += -DNO_BEST_START
+OPT += -DOPTIMISE_DECODER_LITE # this turns on the new core based by token-passing
+#OPT += -DOPTIMISE_ALIGN4
+#OPT += -DNO_BEST_END
+#OPT += -DNO_BEST_START
 
 lib_LTLIBRARIES = libjuicer.la
 
 JUICER_SOURCES = \
 	WFSTDecoder.cpp \
+	WFSTDecoderLite.cpp \
 	WFSTNetwork.cpp \
 	WFSTModel.cpp \
 	WFSTLattice.cpp \
