--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -71,13 +71,17 @@ libjuicer_la_CPPFLAGS = \
 	$(OPT) \
 	@TORCH3_INCLUDES@ \
 	@TRACTER_CFLAGS@ \
-	@HTK_INCLUDES@
-libjuicer_la_LIBADD = @TRACTER_LIBS@
+	@HTK_INCLUDES@ \
+	@INTEL_IPP_INCLUDES@
+libjuicer_la_LIBADD = @TRACTER_LIBS@ @INTEL_IPP_LIBS@
 
 LDADD = libjuicer.la @TORCH3_LIBS@
 
 if WITH_HTK
 JUICER_SOURCES += HModels.cpp
+endif
+
+if WITH_INTEL_IPP
 endif
 
 if WITH_SWIG
