Add tracker lib when linking the binary, not the library.
This is better to link at the time when we log the binary, and not the library.
The other way, it may cause troubles if depending libraries are build in static
or dynamic.

Signed-off-by: Phil Garner <Phil.Garner@idiap.ch>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -70,9 +70,8 @@ libjuicer_la_CPPFLAGS = \
 	@TORCH3_INCLUDES@ \
 	@TRACTER_CFLAGS@ \
 	@HTK_INCLUDES@
-libjuicer_la_LIBADD = @TRACTER_LIBS@
 
-LDADD = libjuicer.la @TORCH3_LIBS@ @HTK_LIBS@
+LDADD = libjuicer.la @TORCH3_LIBS@ @HTK_LIBS@ @TRACTER_LIBS@
 
 if WITH_HTK
 JUICER_SOURCES += HModels.cpp
