OPT_FAST_EXP and OPT_FAST_LOG hacks. Need to be turned on manually in Makefile.am

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,10 +14,14 @@ OPT += -DOPTIMISE_FLATMODEL
 OPT += -DOPT_INST_TEE
 OPT += -DOPT_KEEP_INST
 
+#OPT += -DOPT_FAST_LOG
+#OPT += -DOPT_FAST_EXP
+#OPT += -DLITTLE_ENDIAN
+
 #OPT += DUSE_DOUBLE_SCORE # use double instead of real for Token.score in WFSTDecoderLite
 
 # OPTIMISE_ALIGN4 seems to work well with INTEL's IPP lib, but maybe slower otherwise
-# so it will be turned on when HAVE_INTEL_IPP is defined 
+# so it will be turned on automatically when HAVE_INTEL_IPP is defined 
 #OPT += -DOPTIMISE_ALIGN4
 
 # note: NO_BEST_END and NO_BEST_START only apply to WFSTDecoder.cpp, it won't affect WFSTDecoderLite
