Add an optimisation to use a single best score instead of three
...being best scores for emit, end and start states.  One seems quicker.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,6 +13,7 @@ OPT = # add flags as you wish
 OPT += -DOPT_FLATMODEL
 OPT += -DOPT_INST_TEE
 OPT += -DOPT_KEEP_INST
+OPT += -DOPT_SINGLE_BEST
 
 #OPT += -DOPT_FAST_LOG
 #OPT += -DOPT_FAST_EXP
