add -blockSize to pre-calculate a sequence of frames a time.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,6 +14,7 @@ OPT += -DOPT_FLATMODEL
 OPT += -DOPT_INST_TEE
 OPT += -DOPT_KEEP_INST
 OPT += -DOPT_SINGLE_BEST
+OPT ++ -DOPT_BLOCK_CALC
 
 #OPT += -DOPT_FAST_LOG
 #OPT += -DOPT_FAST_EXP
