implemented partial decoding via -DPARTIAL_DECODING currently it does nothing except print to the log file traced paths' frames at the end of each utterance. the overhead is small if done every 300 frames. add -partialDecoding to juicer binary

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,6 +15,7 @@ OPT += -DOPT_INST_TEE
 OPT += -DOPT_KEEP_INST
 OPT += -DOPT_SINGLE_BEST
 OPT += -DOPT_BLOCK_CALC
+OPT += -DPARTIAL_DECODING
 
 #OPT += -DOPT_FAST_LOG
 #OPT += -DOPT_FAST_EXP
