fix a bug in -partialDecoding when there is no token survived at the end, and can cause a segfault.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,6 +14,10 @@ OPT += -DOPT_FLATMODEL
 OPT += -DOPT_SINGLE_BEST
 OPT += -DPARTIAL_DECODING
 
+#OPT += -DUSE_BINARY_WFST
+#OPT += -DUSE_BINARY_MODELS
+
+
 #OPT += -DOPT_FAST_LOG
 #OPT += -DOPT_FAST_EXP
 
